--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@moonrepo/setup-proto-action",
-  "version": "1.0.0",
+  "name": "@moonrepo/setup-proto",
+  "version": "0.1.0",
   "description": "A GitHub action for installing proto globally and caching the toolchain.",
   "main": "dist/index.js",
   "scripts": {
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/moonrepo/setup-proto-action"
+    "url": "https://github.com/moonrepo/setup-proto"
   },
   "author": "Miles Johnson",
   "license": "MIT",
@@ -29,12 +29,12 @@
     "@types/node": "^18.15.10",
     "@vercel/ncc": "^0.36.1",
     "eslint": "^8.36.0",
-    "eslint-config-moon": "^2.0.2",
-    "prettier": "^2.8.7",
+    "eslint-config-moon": "^2.0.3",
+    "prettier": "^2.8.8",
     "prettier-config-moon": "^1.1.2",
     "ts-node": "^10.9.1",
     "tsconfig-moon": "^1.3.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=16.0.0"
