--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ description: 'Installs proto globally and caches the toolchain.'
 inputs:
   version:
     default: 'latest'
-    description: 'Version of proto to install'
+    description: 'Version of proto to install.'
     required: false
 outputs:
   cache-key:
